<resources>
    <string name="app_name">Product App</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="product">Product</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">$ Price</string>
    <string name="specification">Specification</string>
    <string name="product_os">OS</string>
    <string name="product_cpu">CPU</string>
    <string name="product_memory">XGB</string>
    <string name="product_screen_size">Size</string>
    <string name="my_cart">My Cart</string>
    <string name="my_account">My Account</string>
</resources>