<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    Back Button    -->
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/back_button_background"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_arrow_back"
        android:scaleType="centerInside"
        android:elevation="1dp"/>

    <!--    Product Image    -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:id="@+id/cardProduct"
        app:cardBackgroundColor="#F8F8F8"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:src="@drawable/img_phone"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cardProduct"
        android:orientation="vertical"
        android:layout_marginTop="-15dp"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/product_detail_background">

        <!--    Product Name    -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtProductName"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:text="@string/product_name"
            android:layout_marginBottom="10dp"/>

        <!--    Product Price   -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtProductPrice"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/product_price"
            android:layout_marginBottom="10dp"/>

        <!--    Specification    -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSpecification"
            android:text="@string/specification"
            android:layout_marginBottom="5dp"/>

        <!--    Operating System    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp">

            <!--    Icon    -->
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_os"/>

            <!--    Text    -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:id="@+id/txtProductOS"
                android:gravity="center_vertical"
                android:text="@string/product_os"/>
        </LinearLayout>

        <!--    CPU    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp">

            <!--    Icon    -->
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_cpu"/>

            <!--    Text    -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:id="@+id/txtProductCPU"
                android:gravity="center_vertical"
                android:text="@string/product_cpu"/>
        </LinearLayout>

        <!--    Memory    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp">

            <!--    Icon    -->
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_memory"/>

            <!--    Text    -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:id="@+id/txtProductMemory"
                android:gravity="center_vertical"
                android:text="@string/product_memory"/>
        </LinearLayout>

        <!--    Screen Size   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp">

            <!--    Icon    -->
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_screen_size"/>

            <!--    Text    -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:id="@+id/txtProductSize"
                android:gravity="center_vertical"
                android:text="@string/product_screen_size"/>
        </LinearLayout>
    </LinearLayout>

    <!--    Add to Cart Button    -->
    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_to_cart_background"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>